# seguimiento_presupuesto

./: .gitignore  auth_ppto.py  main.py  pyproject.toml
pages/: activos_fijos.py  consumos.py  gastos.py
services/: efectividad_utils.py  logging.py  users.py
views/: activos_fijos.py  admin.py  consumos.py  gastos.py  ingresos.py  ppto_total.py  rentabilidad.py
