[project]
name = "seguimiento-ppto"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "authlib>=1.6.9",
    "fastexcel>=0.19.0",
    "numpy>=2.4.2",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "plotly>=6.6.0",
    "polars>=1.38.1",
    "st-gsheets-connection>=0.1.0",
    "streamlit>=1.54.0",
]
